Implemented openapi spec (core+extension)
